[ADD] filters added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nabvar></app-nabvar>
-<div class="app">
-  <div class="container">
+<div class="app pt-5">
+  <div class="contenedor">
     <app-logs></app-logs>
   </div>
 </div>
