--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -1,30 +1,49 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Log-Server</a>
+    <a class="navbar-brand" routerLink="home">Log-Server</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0 align-items-center">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Chats</a>
+          <a class="nav-link active" aria-current="page" href="#">Filter</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item">
+          <select class="filter" (change)="onFilterSelected($event.target.value)">
+            <option *ngFor="let stat of status" [value]="stat.key">
+              {{ stat.name }}
+            </option>
+          </select>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Only</a>
+        </li>
+        <li class="nav-item">
+          <select class="filter" (change)="onFilterSelected($event.target.value)">
+            <option *ngFor="let stat of status" [value]="stat.key">
+              {{ stat.name }}
+            </option>
+          </select>
+        </li> -->
+      </ul>
+    </div>
+  </div>
+</nav>
+<!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             Status
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">Trace</a></li>
+            <li><a class="dropdown-item" href="#">Debug</a></li>
+            <li><a class="dropdown-item" href="#">Info</a></li>
+            <li><a class="dropdown-item" href="#">Log</a></li>
+            <li><a class="dropdown-item" href="#">Warning</a></li>
+            <li><a class="dropdown-item" href="#">Error</a></li>
+            <li><a class="dropdown-item" href="#">Fatal</a></li>
+            <li><a class="dropdown-item" href="#">Off</a></li>
           </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+        </li> -->
