--- a/src/app/components/nabvar/nabvar.component.scss
+++ b/src/app/components/nabvar/nabvar.component.scss
@@ -1,4 +1,13 @@
-.navbar-brand {
-  color: #fff;
-  font-weight: bold;
+.navbar {
+  .navbar-brand {
+    color: #fff;
+    font-weight: bold;
+  }
+
+  .filter {
+    padding: 5px;
+    background-color: transparent;
+    outline: none;
+    color: #fff;
+  }
 }
