[ADD] elacticsearch conexion to log on kibana

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <app-nabvar></app-nabvar>
+<div class="container mt-5">
+  <button class="btn btn-secondary mr-5" (click)="sendLog()">Enviar log</button>
+  <button class="btn btn-danger" (click)="deleteLog()">Enviar log</button>
+</div>
 <div class="app pt-5">
   <div class="contenedor">
     <app-logs></app-logs>
